--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    font-size: 16px;
+    border: none;
+    padding: 0px;
+    margin: 0px;
+    --midnight-violet: #2D033B;
+    --dark-violet: #810CA8;
+    --dark-pink: #C147E9;
+    --light-pink: #E5B8F4;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+body, html {
+    margin: 0px;
+    border: 0px;
+    background-image: linear-gradient(to top right, var(--dark-violet), var(--midnight-violet), var(--dark-pink));
+}
