--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,12 @@ body, html {
     border: 0px;
     background-image: linear-gradient(to top right, var(--dark-violet), var(--midnight-violet), var(--dark-pink));
 }
+
+li, a , button {
+    color: black;
+    list-style: none;
+    border: none;
+    padding: 0px;
+    margin: 0px;
+    text-decoration: none;
+}
