fix: replace background color with image

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
 body, html {
     margin: 0px;
     border: 0px;
-    background-image: linear-gradient(to top right, var(--dark-violet), var(--midnight-violet), var(--dark-pink));
+    background-image: url("https://images.unsplash.com/photo-1567598116074-2bf31f6af491?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
 }
 
 li, a , button {
