--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,10 @@
     border: none;
     padding: 0px;
     margin: 0px;
-    --midnight-violet: #2D033B;
-    --dark-violet: #810CA8;
-    --dark-pink: #C147E9;
-    --light-pink: #E5B8F4;
+    --midnight-violet: 45, 3, 59;
+    --dark-violet: 129, 12, 168;
+    --dark-pink: 193, 71, 233;
+    --light-pink: 229, 184, 244;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body, html {
@@ -17,7 +17,7 @@ body, html {
 }
 
 li, a , button {
-    color: black;
+    color: inherit;
     list-style: none;
     border: none;
     padding: 0px;
