--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
-<app-nav-bar></app-nav-bar>
 <main>
     <div class="title-logo">
       <h1>Welcome</h1>
       <p>visitor</p> 
     </div>
+    <img src="">
     <div class="grid">
         <app-card
         [title]="'¿ Did you know ?'"
@@ -16,4 +16,3 @@
       </app-card>
     </div>
 </main>
-<router-outlet></router-outlet>
