--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
 <nav>
     <div class="navbar">
-        <i ><img src="assets/stealthysmile.png"><a href="/"></a></i>
+        <i ><a href="/"><img src="assets/stealthysmile.png"></a></i>
         <ul class="nav-items">
-            <li>About</li>
+            <li><a href="/about">About</a></li>
             <li>Projects</li>
             <li>Links</li>
         </ul>
