fix: better griding system

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,11 +15,21 @@ body, html {
     border: 0px;
     background-image: url("https://images.unsplash.com/photo-1567598116074-2bf31f6af491?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
 }
+.grid {
+    align-items: center;
+    justify-items: center;
+    gap: 5rem;
+    margin: 3rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(240px, 1fr));
+}
 
 li, a , button {
     color: inherit;
     list-style: none;
     border: none;
+    font-family: inherit;
     padding: 0px;
     margin: 0px;
     text-decoration: none;
