--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,19 +1,34 @@
 .card {
   width: 20rem;
-  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: .5rem;
+  border-radius: .8rem;
   outline: solid;
   box-shadow: rgb(var(--midnight-violet)) 1rem 1rem;
   color: rgb(var(--midnight-violet));
-  background-color: rgb(var(--dark-violet));
+  background: linear-gradient( to right bottom, rgb(var(--dark-violet)), rgba(var(--light-pink), .5));
 }
 .card > img {
   overflow-y: hidden;
   width: 100%;
   height: 100%;
+}
+.card > button {
+  background-color: rgba(var(--midnight-violet), .8);
+  color: rgb(var(--dark-violet));
+  font-size: 1rem;
+  border-radius: 1rem;
+  outline: double;
+  outline-width: .5rem;
+  outline-offset: -.5rem;
+  padding: .7rem;
+  margin: .2rem;
+}
+.card > button :hover {
+  outline-offset: 1rem;
 }
 
 .card > h2 {
@@ -29,6 +44,8 @@
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;
 }
+
 .card > p {
   color: rgb(var(--midnight-violet));
+  text-align: center;
 }
