--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -3,5 +3,7 @@
     <img *ngIf="icon" src="{{icon}}">
     <h2 *ngIf="title">{{title}}</h2>
     <p *ngIf="shortParagraph">{{shortParagraph}}</p>
+    <b *ngIf="footer">{{footer}}</b>
+    <button *ngIf="link" type="button" (click)="onClick()">Click me!</button>
 
 </div>
