fix: remove unnecessary card

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,12 +7,7 @@
     <div class="grid">
         <app-card
         [title]="'¿ Did you know ?'"
-        [shortParagraph]="'This is the second iteration of stealthy web'"
-        >
-        </app-card>
-        <app-card
-        [title]="'lorem ipsum'"
-        [shortParagraph]="'dore amen'">
-      </app-card>
+        [shortParagraph]="'This is the second iteration of stealthy web'">
+        </app-card> 
     </div>
 </main>
