--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
         <i ><a href="/"><img src="assets/stealthysmile.png"></a></i>
         <ul class="nav-items">
             <li><a href="/about">About</a></li>
-            <li>Projects</li>
+            <li><a href="/projects">Projects</a></li>
             <li>Links</li>
         </ul>
     </div>
