fix: add backwards compatablity to css

--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -38,6 +38,7 @@
     rgb(var(--midnight-violet)),
     rgb(var(--dark-violet))
   );
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   padding-bottom: 0.5rem;
