--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
         <ul class="nav-items">
             <li><a href="/about">About</a></li>
             <li><a href="/projects">Projects</a></li>
-            <li>Links</li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
     </div>
 </nav>
