--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,45 +1,45 @@
 main > div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-inline: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-inline: 1rem;
 }
 .heading {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .heading > h1 {
-    outline: solid;
-    outline-color: rgba(var(--light-pink), 0.5);
-    outline-offset: -.5rem;
-    background-color: rgba(var(--midnight-violet), 0.3);
-    color: rgba(var(--dark-pink), 0.5);
-    text-align: center;
-    padding: .4rem;
+  outline: solid;
+  outline-color: rgba(var(--light-pink), 0.5);
+  outline-offset: -0.5rem;
+  background-color: rgba(var(--midnight-violet), 0.3);
+  color: rgba(var(--dark-pink), 0.5);
+  text-align: center;
+  padding: 0.4rem;
 }
 .heading > p {
-    outline: solid;
-    outline-color: rgba(var(--midnight-violet), 0.3);
-    outline-offset: -.3rem;
-    background-color: rgba(var(--dark-pink), 0.5);
-    padding: .4rem;
-    margin-left: .5rem;
-    color:rgba(var(--midnight-violet));
+  outline: solid;
+  outline-color: rgba(var(--midnight-violet), 0.3);
+  outline-offset: -0.3rem;
+  background-color: rgba(var(--dark-pink), 0.5);
+  padding: 0.4rem;
+  margin-left: 0.5rem;
+  color: rgba(var(--midnight-violet));
 }
 article {
-    background-color: rgba(var(--midnight-violet), 0.3);
-    color: rgba(var(--dark-pink), 0.5);
-    font-size: large;
-    margin: 1rem;
-    padding: 1rem;
+  background-color: rgba(var(--midnight-violet), 0.3);
+  color: rgba(var(--dark-pink), 0.5);
+  font-size: large;
+  margin: 1rem;
+  padding: 1rem;
 
-    outline-color: rgba(var(--dark-pink), 0.1);
-    outline: solid;
-    outline-offset: -.5rem;
+  outline-color: rgba(var(--dark-pink), 0.1);
+  outline: solid;
+  outline-offset: -0.5rem;
 }
 li {
-    list-style: circle;
-    margin-bottom: .5rem;
+  list-style: circle;
+  margin-bottom: 0.5rem;
 }
