lint: linting everything

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,14 @@
 <main>
-    <div class="title-logo">
-      <h1>Welcome</h1>
-      <p>visitor</p> 
-    </div>
-    <img src="">
-    <div class="grid">
-        <app-card
-        [title]="'¿ Did you know ?'"
-        [shortParagraph]="'This is the second iteration of stealthy web'">
-        </app-card> 
-    </div>
+  <div class="title-logo">
+    <h1>Welcome</h1>
+    <p>visitor</p>
+  </div>
+  <img src="" />
+  <div class="grid">
+    <app-card
+      [title]="'¿ Did you know ?'"
+      [shortParagraph]="'This is the second iteration of stealthy web'"
+    >
+    </app-card>
+  </div>
 </main>
