--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,45 +1,44 @@
 nav {
-    margin:0px;
-    padding:0px;
-    background-color: rgb(var(--midnight-violet));
-    width: 100vw;
-    
+  margin: 0px;
+  padding: 0px;
+  background-color: rgb(var(--midnight-violet));
+  width: 100vw;
 }
 .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 .navbar-items {
-    justify-self: center;
+  justify-self: center;
 }
 .nav-items > * {
-    cursor: pointer;
-    transition: all ease 200ms ;
-    color: rgb(var(--light-pink));
-    display: inline-block;
-    margin: .5rem;
-    outline: solid;
-    border-radius: 1rem;
-    padding: .5rem;
-    outline-color: rgb(var(--dark-violet));
+  cursor: pointer;
+  transition: all ease 200ms;
+  color: rgb(var(--light-pink));
+  display: inline-block;
+  margin: 0.5rem;
+  outline: solid;
+  border-radius: 1rem;
+  padding: 0.5rem;
+  outline-color: rgb(var(--dark-violet));
 }
 .nav-items > *:hover {
-    outline:double;
-    outline-offset: -.2rem;
-    outline-width: .8rem;
+  outline: double;
+  outline-offset: -0.2rem;
+  outline-width: 0.8rem;
 }
 img:hover {
-    background-color: rgb(var(--midnight-violet));   
+  background-color: rgb(var(--midnight-violet));
 }
 img {
-    transition: all ease 200ms;
-    outline: solid;
-    cursor: pointer;
-    background-color: black;
-    border-radius: 1rem;
-    padding: 0.5rem;
-    margin: 1rem;
-    width: 4rem;
-    height: 1.5rem;
+  transition: all ease 200ms;
+  outline: solid;
+  cursor: pointer;
+  background-color: black;
+  border-radius: 1rem;
+  padding: 0.5rem;
+  margin: 1rem;
+  width: 4rem;
+  height: 1.5rem;
 }
