--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -4,12 +4,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: .5rem;
-  border-radius: .8rem;
+  padding: 0.5rem;
+  border-radius: 0.8rem;
   outline: solid;
   box-shadow: rgb(var(--midnight-violet)) 1rem 1rem;
   color: rgb(var(--midnight-violet));
-  background: linear-gradient( to right bottom, rgb(var(--dark-violet)), rgba(var(--light-pink), .5));
+  background: linear-gradient(
+    to right bottom,
+    rgb(var(--dark-violet)),
+    rgba(var(--light-pink), 0.5)
+  );
 }
 .card > img {
   overflow-y: hidden;
@@ -17,15 +21,15 @@
   height: 100%;
 }
 .card > button {
-  background-color: rgba(var(--midnight-violet), .8);
+  background-color: rgba(var(--midnight-violet), 0.8);
   color: rgb(var(--dark-violet));
   font-size: 1rem;
   border-radius: 1rem;
   outline: double;
-  outline-width: .5rem;
-  outline-offset: -.5rem;
-  padding: .7rem;
-  margin: .2rem;
+  outline-width: 0.5rem;
+  outline-offset: -0.5rem;
+  padding: 0.7rem;
+  margin: 0.2rem;
 }
 .card > button :hover {
   outline-offset: 1rem;
