--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,9 +1,8 @@
 <div class="card">
-    <img *ngIf="image" src="{{image}}">
-    <img *ngIf="icon" src="{{icon}}">
-    <h2 *ngIf="title">{{title}}</h2>
-    <p *ngIf="shortParagraph">{{shortParagraph}}</p>
-    <b *ngIf="footer">{{footer}}</b>
-    <button *ngIf="link" type="button" (click)="onClick()">Click me!</button>
-
+  <img *ngIf="image" src="{{ image }}" />
+  <img *ngIf="icon" src="{{ icon }}" />
+  <h2 *ngIf="title">{{ title }}</h2>
+  <p *ngIf="shortParagraph">{{ shortParagraph }}</p>
+  <b *ngIf="footer">{{ footer }}</b>
+  <button *ngIf="link" type="button" (click)="onClick()">Click me!</button>
 </div>
