--- a/src/app/contact-card/contact-card.component.html
+++ b/src/app/contact-card/contact-card.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <a href={{link}}>
-     <img class="shadow"src={{icon}}>
-   <img src={{icon}}>
- 
-    <h3>{{username}}</h3>
-</a>
+  <a href="{{ link }}">
+    <img class="shadow" src="{{ icon }}" />
+    <img src="{{ icon }}" />
+
+    <h3>{{ username }}</h3>
+  </a>
 </div>
