--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,10 +1,12 @@
 <nav>
-    <div class="navbar">
-        <i ><a href="/"><img src="assets/stealthysmile.png"></a></i>
-        <ul class="nav-items">
-            <li><a href="/about">About</a></li>
-            <li><a href="/projects">Projects</a></li>
-            <li><a href="/contact">Contact</a></li>
-        </ul>
-    </div>
+  <div class="navbar">
+    <i
+      ><a href="/"><img src="assets/stealthysmile.png" /></a
+    ></i>
+    <ul class="nav-items">
+      <li><a href="/about">About</a></li>
+      <li><a href="/projects">Projects</a></li>
+      <li><a href="/contact">Contact</a></li>
+    </ul>
+  </div>
 </nav>
