--- a/src/styles.css
+++ b/src/styles.css
@@ -1,36 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-    font-size: 16px;
-    border: none;
-    padding: 0px;
-    margin: 0px;
-    --midnight-violet: 45, 3, 59;
-    --dark-violet: 129, 12, 168;
-    --dark-pink: 193, 71, 233;
-    --light-pink: 229, 184, 244;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
+  border: none;
+  padding: 0px;
+  margin: 0px;
+  --midnight-violet: 45, 3, 59;
+  --dark-violet: 129, 12, 168;
+  --dark-pink: 193, 71, 233;
+  --light-pink: 229, 184, 244;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-body, html {
-    margin: 0px;
-    border: 0px;
-    background-image: url("https://images.unsplash.com/photo-1567598116074-2bf31f6af491?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+body,
+html {
+  margin: 0px;
+  border: 0px;
+  background-image: url("https://images.unsplash.com/photo-1567598116074-2bf31f6af491?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
 }
 .grid {
-    align-items: center;
-    justify-items: center;
-    gap: 5rem;
-    margin: 3rem;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(240px, 1fr));
+  align-items: center;
+  justify-items: center;
+  gap: 5rem;
+  margin: 3rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(240px, 1fr));
 }
 
-li, a , button {
-    color: inherit;
-    list-style: none;
-    border: none;
-    font-family: inherit;
-    padding: 0px;
-    margin: 0px;
-    text-decoration: none;
+li,
+a,
+button {
+  color: inherit;
+  list-style: none;
+  border: none;
+  font-family: inherit;
+  padding: 0px;
+  margin: 0px;
+  text-decoration: none;
 }
