--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -14,7 +14,7 @@ main > div {
   outline: solid;
   outline-color: rgba(var(--light-pink), 0.5);
   outline-offset: -0.5rem;
-  background-color: rgba(var(--midnight-violet), 0.3);
+  background-color: rgba(var(--midnight-violet), 0.7);
   color: rgba(var(--dark-pink), 0.5);
   text-align: center;
   padding: 0.4rem;
@@ -29,7 +29,7 @@ main > div {
   color: rgba(var(--midnight-violet));
 }
 article {
-  background-color: rgba(var(--midnight-violet), 0.3);
+  background-color: rgba(var(--midnight-violet), .8);
   color: rgba(var(--dark-pink), 0.5);
   font-size: large;
   margin: 1rem;
