--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 :root {
   font-size: 16px;
   border: none;
@@ -25,13 +24,11 @@ html {
   height: 100%;
   border: 0px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(20rem, 1fr));
 }
 
-li,
-a,
-button {
+li, a, button {
   color: inherit;
   list-style: none;
   border: none;
