fix: make page not found more appealing

--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,6 @@
-<p>page-not-found works!</p>
+<main>
+    <div class="title-logo">
+        <h1>This page does not seem to exist</h1>
+        <p><a href="/">go back home?</a></p>
+    </div>
+</main>
