fix: make home more usable

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,10 @@
 <main>
   <div class="title-logo">
-    <h1>Welcome</h1>
+    <h1>👋 Welcome</h1>
     <p>visitor</p>
   </div>
-  <img src="" />
-  <div class="grid">
-    <app-card
-      [title]="'¿ Did you know ?'"
-      [shortParagraph]="'This is the second iteration of stealthy web'"
-    >
-    </app-card>
-  </div>
+  <app-text-blob
+  title="why stealthyᵈᵉᵛ?"
+  content="dev.html">
+</app-text-blob>
 </main>
