--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,12 +1,12 @@
 <nav>
   <div class="navbar">
     <i
-      ><a href="/"><img src="assets/stealthysmile.png" /></a
+      ><a routerLink="/"><img src="assets/stealthysmile.png" /></a
     ></i>
     <ul class="nav-items">
-      <li><a href="/about">About</a></li>
-      <li><a href="/projects">Projects</a></li>
-      <li><a href="/contact">Contact</a></li>
+      <li><a routerLink="/about">About</a></li>
+      <li><a routerLink="/projects">Projects</a></li>
+      <li><a routerLink="/contact">Contact</a></li>
     </ul>
   </div>
 </nav>
