--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <main>
     <div class="title-logo">
         <h1>This page does not seem to exist</h1>
-        <p><a href="/">go back home?</a></p>
+        <p><a routerLink="/">go back home?</a></p>
     </div>
 </main>
