--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,12 +1,13 @@
 <nav>
   <div class="navbar">
-    <i
-      ><a routerLink="/"><img src="assets/stealthysmile.png" /></a
-    ></i>
+    <div
+      ><a routerLink="/"><img alt="stealthy-smile for home" src="assets/stealthysmile.png"/></a
+    ></div>
     <ul class="nav-items">
       <li><a routerLink="/about">About</a></li>
       <li><a routerLink="/projects">Projects</a></li>
       <li><a routerLink="/contact">Contact</a></li>
+      <li><a routerLink="/blogs">Blogs</a></li>
     </ul>
   </div>
 </nav>
