chore: remove unused route thingy

--- a/src/app/text-blob/text-blob.component.html
+++ b/src/app/text-blob/text-blob.component.html
@@ -1,4 +1,4 @@
 <article class="text-blob">
   <h2>{{title}}</h2>
-  <p [innerHTML]="sanitizedHtml" routeTransformer></p> 
+  <p [innerHTML]="sanitizedHtml"></p> 
 </article>
