--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,9 @@
   border: none;
   padding: 0px;
   margin: 0px;
+  --primary: #432a62;
+  --accent: #c5af63;
+  --text: #efb8e0;
   --midnight-violet: 45, 3, 59;
   --dark-violet: 129, 12, 168;
   --dark-pink: 193, 71, 233;
@@ -10,12 +13,14 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
 body,
 html {
   margin: 0px;
   border: 0px;
   background-image: url("https://images.unsplash.com/photo-1567598116074-2bf31f6af491?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
 }
+
 .grid {
   align-items: center;
   justify-items: center;
@@ -28,7 +33,9 @@ html {
   grid-template-rows: repeat(auto-fit, minmax(20rem, 1fr));
 }
 
-li, a, button {
+li,
+a,
+button {
   color: inherit;
   list-style: none;
   border: none;
@@ -36,4 +43,22 @@ li, a, button {
   padding: 0px;
   margin: 0px;
   text-decoration: none;
+}
+
+.blog {
+  margin: 2rem;
+  padding: 2rem;
+  border: solid 0.255rem;
+}
+
+.blog>p>a {
+  color: green;
+  text-decoration: underline;
+}
+
+.blog>header>h3 {
+  color: white;
+  text-decoration: underline;
+  text-decoration-color: purple;
+  text-decoration-style: wavy;
 }
