--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -1,13 +1,8 @@
 <main>
- <div class="contents">
     <nav class="side-nav">
         <ul class="nav-items">
-            <li><button>why stealthydev</button></li>
+            <li><button routerLink="why-stealthy-dev">why stealthydev</button></li>
         </ul>
     </nav>
-    <app-text-blob
-    title="stealthydev"
-    content="dev.html">
-    </app-text-blob>
- </div>
+    <router-outlet></router-outlet>
 </main>
