fix: remove text blob from  home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,6 @@
 <main>
-  <div class="title-logo">
+  <header class="title-logo">
     <h1>👋 Welcome</h1>
     <p>visitor</p>
-  </div>
-  <app-text-blob
-  title="why stealthyᵈᵉᵛ?"
-  content="dev.html">
-</app-text-blob>
+  </header>
 </main>
