feat: major commit before update to angular v16

--- a/src/app/blogs/blogs.component.css
+++ b/src/app/blogs/blogs.component.css
@@ -7,7 +7,7 @@ main {
 }
 
 nav {
-  min-height: 100%;
+  min-height: 100vh;
   background-color: rgb(var(--midnight-violet));
   min-width: 10rem;
 }
