--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -2,6 +2,7 @@
     <nav class="side-nav">
         <ul class="nav-items">
             <li><button routerLink="why-stealthy-dev">why stealthydev</button></li>
+            <li><button routerLink="my-time-at-gbot">fascination with robotics</button></li>
         </ul>
     </nav>
     <router-outlet></router-outlet>
