--- a/src/styles.css
+++ b/src/styles.css
@@ -60,6 +60,11 @@ button {
   text-decoration: underline;
 }
 
+.blog>h4 {
+  color: white;
+}
+
 .blog>header>h2 {
   text-align: center;
+  color: white;
 }
