feat: add inablity-to-complete blog

--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -3,6 +3,7 @@
         <ul class="nav-items">
             <li><button routerLink="why-stealthy-dev">why stealthydev</button></li>
             <li><button routerLink="my-time-at-gbot">fascination with robotics</button></li>
+            <li><button routerLink="inability-to-complete">Inablity to complete</button></li>
         </ul>
     </nav>
     <router-outlet></router-outlet>
