--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,8 +1,6 @@
 <nav>
   <div class="navbar">
-    <div
-      ><a routerLink="/"><img alt="stealthy-smile for home" src="assets/stealthysmile.png"/></a
-    ></div>
+    <div><a routerLink="/"><img alt="stealthy-smile for home" src="assets/stealthysmile.png" /></a></div>
     <ul class="nav-items">
       <li><a routerLink="/about">About</a></li>
       <li><a routerLink="/projects">Projects</a></li>
