feat: finish gbot blog

--- a/src/app/blogs/blogs.component.css
+++ b/src/app/blogs/blogs.component.css
@@ -9,7 +9,8 @@ main {
 nav {
   min-height: 100vh;
   background-color: rgb(var(--midnight-violet));
-  min-width: 10rem;
+  flex-shrink: 0;
+  width: 10rem;
 }
 
 .nav-items {
@@ -31,6 +32,11 @@ nav {
   border-radius: 1rem;
   padding: 0.5rem;
   outline-color: rgb(var(--dark-violet));
+}
+
+.active {
+  background-color:  rgb(var(--light-pink));
+  
 }
 
 .nav-items>*:hover {
