--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
       <li><a routerLink="/about">About</a></li>
       <li><a routerLink="/projects">Projects</a></li>
       <li><a routerLink="/contact">Contact</a></li>
-      <li><a routerLink="/blogs">Blogs</a></li>
+      <li><a routerLink="/writing">Writing</a></li>
     </ul>
   </div>
 </nav>
